# lora-testing

./: .gitignore  LICENSE  configs-suite.json  lora_configs.py  main.py  ping.py  pyproject.toml  readme.md  reset.py  utils.py
results/hardware/lora-hardware-12-meters/: avg.csv  compare.csv  description.json
results/hardware/lora-hardware-120-meters/: avg.csv  compare.csv  description.json  results.csv
results/hardware/lora-hardware-25-meters/: avg.csv  compare.csv
results/hardware/lora-hardware-260-meters/: avg.csv  compare.csv  description.json  results.csv
results/hardware/lora-hardware-450-meters/: avg.csv  compare.csv  description.json  results.csv
results/hardware/lora-hardware-5-meters/: avg.csv  (+1 more)
results/lora-hardware-12-meters/: results.csv
results/lora-hardware-200-meters/: description.json
results/lora-hardware-25-meters/: description.json  results.csv
results/lora-hardware-5-meters/: description.json  results.csv
results/lora-hardware-50-meters/: results.csv
results/lora-hardware-50-meters-v2/: description.json
results/lora-hardware-500-meters/: description.json  results.csv
results/lora-hardware-close/: avg.csv  description.json  results.csv
results/lora-hardware-meter/: avg.csv  description.json  results.csv
results/open_field/: avg.csv  description.json  results.csv
results/suburban/: avg.csv  description.json  results.csv
scripts/: avarage.py  average.py  command.py  compare.py  ping.py
src/: __init__.py  average.py  constants.py  experiments.py  models.py  utils.py
src/lora/: __init__.py  lora_base.py  lora_simulation.py
(+32 files in other folders)
