[tool.poetry]
name = "lora-testing"
version = "0.0.1"
description = "LoRa testing different settings"
authors = ["Shkoropad Yurii <lvivgeorg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pandas = "^2.3.3"
lora-hardware-model = {git = "ssh://git@github.com/georgelviv/lora-hardware-model.git"}
lora-simulation-model = {git = "git@github.com:georgelviv/lora-simulation-model.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
